# python-repository-template

./: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: lint_check.yml  pytest.yml
python_repository_template/: sample.py
test/: test_sample.py
